# redact-clinical-german

./: .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.streamlit  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  IMPLEMENTATION_SUMMARY_V3.md  PYDANTIC_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  app.py  app.py.backup  build-docker.sh  build-windows.bat  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: cities_de.txt  medical_facilities_de.json
docs/: excel_date_shifter.vba  excel_date_shifting_guide.md
src/: __init__.py  config.py  date_shifter.py  facility_anonymizer.py  image_anonymizer.py  image_extractor.py  location_anonymizer.py  location_database.py  main.py  pii_extractor.py  preview_generator.py  template_generator.py  zone_anonymizer.py
templates/: TEMPLATE_DOCUMENTATION.md  german_clinical_default.json
tests/: __init__.py  test_date_extraction_disabled.py  test_date_shifter.py  test_facility_anonymizer.py  test_image_anonymizer.py  test_location_anonymizer.py  test_location_database.py  test_pii_extractor.py  test_preview_generator.py  test_template_generator.py  test_template_loading.py  test_word_boundaries.py  test_zone_anonymizer.py  test_zone_redaction.py
